# vs

./: README.md
empty-project/: CMakeLists.txt
empty-project/include/: Sample.hpp
empty-project/src/: Main.cpp  Sample.cpp
empty-project/test/: Test.cpp
mfc-project/: CMakeLists.txt
mfc-project/include/: MainApp.hpp
mfc-project/src/: Main.cpp  MainApp.cpp
